Sat Apr 14 16:21:32 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Do not parse packets with different timeout when protocol
	  is active -> may cause problem with rekey.  Affected file
	  silcd/server.c.

Fri Apr 13 17:12:46 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added printing of error messages during SKE protocol from the
	  failure packet sent by server during SKE.  Affected file
	  silc/client_ops.c.

	* Removed the client's failure_callback handling with timeout
	  and handle it immediately when received.

	* The SKE library returned wrong type in SUCCESS and FAILURE 
	  packets.  They must be 32 bit MSB not 16 bit MSB.

Fri Apr 13 00:09:08 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Ok, rewrote the logic of the re-key and now it seems to work.
	  I tested it on high traffic with frequent re-keys without
	  problems.  Added hmac_receive (and renamed hmac to hmac_send)
	  in SilcClientConnection in lib/silcclient/client.h and
	  in SilcIDListData in silcd/idlist.h.  Also, removed the
	  SilcPacketParserContext's cipher and hmac fields as they are
	  not needed anymore and actually caused some problems when
	  the ciphers and hmac's changed underneath the packet parser.

Thu Apr 12 14:42:51 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* If re-key protocol is active then process the incoming packets
	  synchronously since we must assure that icoming packets encrypted
	  with the old key is processed before the new keys is set to
	  use.  This is true other packets than for REKEY packets.
	  Affected file silcd/server.c.  The same was done to client library
	  as well, affected file lib/silcclient/client.c.

Thu Apr 12 12:01:52 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed bug in client and server to accept the force send if
	  the packet is send from silc_[server/client]_packet_process
	  function.  Otherwise the packets are never delivered, oops.
