@@ -4,6 +4,10 @@ Sat Apr 14 16:21:32 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
 	  is active -> may cause problem with rekey.  Affected file
 	  silcd/server.c.
 
+	* When server receives signoff notify it must not create
+	  new channel key if the client is on any channels since the
+	  sender of the signoff notify will create it.
+
 Fri Apr 13 17:12:46 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
 
 	* Added printing of error messages during SKE protocol from the
